--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "mydaily-domo",
+  "name": "mydaily-demo",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
-
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Akinades/myDaily-demo.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Akinades/myDaily-demo/issues"
+  },
+  "homepage": "https://github.com/Akinades/myDaily-demo#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "env": "^0.0.2",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mongoose": "^6.8.4",
-    "node": "^16.16.0"
+    "node": "^19.4.0",
+    "nodemon": "^2.0.20"
   }
 }
